--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=MyBlog
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/blog?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=etoile64
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
